@@ -1,6 +1,9 @@
 package com.mike.backend.myBackendTest.config.security;
 
 import com.mike.backend.myBackendTest.security.JwtAuthenticationFilter;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -12,20 +15,41 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
+/**
+ * Security-Konfiguration — unterstützt zwei Modi:
+ *
+ * auth.mode=local  → Eigene JWT-Auth (JwtAuthenticationFilter + JwtService)
+ *                     Für lokale Entwicklung und Docker.
+ *
+ * auth.mode=auth0  → Auth0 OAuth2 Resource Server (RS256 + JWKS)
+ *                     Für Produktion auf Railway.
+ *                     /api/auth/** Endpoints werden deaktiviert.
+ */
 @Configuration
 @EnableWebSecurity
 @EnableMethodSecurity
 public class SecurityConfig {
 
+    private static final Logger log = LoggerFactory.getLogger(SecurityConfig.class);
+
     private final JwtAuthenticationFilter jwtFilter;
+
+    @Value("${auth.mode:local}")
+    private String authMode;
+
+    @Value("${cors.allowed-origins:http://localhost:4200,http://localhost:3000}")
+    private String allowedOriginsRaw;
 
     public SecurityConfig(JwtAuthenticationFilter jwtFilter) {
         this.jwtFilter = jwtFilter;
@@ -37,18 +61,69 @@ public class SecurityConfig {
                 .csrf(csrf -> csrf.disable())
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(s -> s.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .headers(h -> h.frameOptions(f -> f.sameOrigin()));
+
+        if ("auth0".equalsIgnoreCase(authMode)) {
+            log.info("=== AUTH MODE: Auth0 (OAuth2 Resource Server) ===");
+            configureAuth0(http);
+        } else {
+            log.info("=== AUTH MODE: Local JWT (Custom JwtService) ===");
+            configureLocalJwt(http);
+        }
+
+        return http.build();
+    }
+
+    /**
+     * Lokale JWT-Auth — bestehende Logik.
+     * /api/auth/** ist offen für Login/Register.
+     */
+    private void configureLocalJwt(HttpSecurity http) throws Exception {
+        http
                 .authorizeHttpRequests(auth -> auth
                         .requestMatchers("/api/auth/**").permitAll()
+                        .requestMatchers("/api/health").permitAll()
                         .requestMatchers("/h2-console/**").permitAll()
-                        // FIX: OPTIONS Preflight-Requests immer erlauben (sonst schlägt PATCH-CORS fehl)
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/admin/**").hasRole("ADMIN")
                         .anyRequest().authenticated()
                 )
-                .headers(h -> h.frameOptions(f -> f.sameOrigin()))
                 .addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
+    }
 
-        return http.build();
+    /**
+     * Auth0-Modus — OAuth2 Resource Server.
+     * Validiert Auth0 JWTs über JWKS-Endpoint.
+     * /api/auth/** Endpoints sind deaktiviert (Auth0 übernimmt Login).
+     */
+    private void configureAuth0(HttpSecurity http) throws Exception {
+        http
+                .authorizeHttpRequests(auth -> auth
+                        // Auth0 Health-Check / Public
+                        .requestMatchers("/api/health", "/api/public/**").permitAll()
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/admin/**").hasAuthority("ROLE_ADMIN")
+                        // Alles andere erfordert Auth0-Token
+                        .anyRequest().authenticated()
+                )
+                .oauth2ResourceServer(oauth2 -> oauth2
+                        .jwt(jwt -> jwt.jwtAuthenticationConverter(auth0JwtConverter()))
+                );
+    }
+
+    /**
+     * Konvertiert Auth0 JWT-Claims in Spring Security Authorities.
+     * Auth0 speichert Rollen unter einem custom namespace.
+     */
+    private JwtAuthenticationConverter auth0JwtConverter() {
+        JwtGrantedAuthoritiesConverter authoritiesConverter = new JwtGrantedAuthoritiesConverter();
+        // Auth0 sendet Permissions unter "permissions" Claim
+        authoritiesConverter.setAuthoritiesClaimName("permissions");
+        authoritiesConverter.setAuthorityPrefix("");
+
+        JwtAuthenticationConverter converter = new JwtAuthenticationConverter();
+        converter.setJwtGrantedAuthoritiesConverter(authoritiesConverter);
+        return converter;
     }
 
     @Bean
@@ -63,9 +138,10 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
+        String[] origins = allowedOriginsRaw.split(",");
+
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(List.of("http://localhost:4200", "http://localhost:3000"));
-        // FIX: PATCH explizit in der Spring-Security-CORS-Config — behebt OPTIONS-Preflight-Fehler
+        config.setAllowedOrigins(Arrays.asList(origins));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(List.of("*"));
         config.setExposedHeaders(List.of("Authorization"));
